--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -2,7 +2,7 @@
 = simple_form_for(@task) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-
+  = flash[:alert] if flash[:alert].present?
   .form-inputs
     = f.input :name, label: t('name')
     = f.input :description, label: t('description')
